# pokemon-rust

./: Cargo.toml
src/: main.rs
src/client/: mod.rs  pokeapi.rs
src/error/: api.rs  mod.rs
src/handlers/: pokemon.rs
src/models/: mod.rs  pokemon.rs
src/services/: mod.rs  pokemon.rs
